W-14122558: Modularization of Deployment module (#12884)